# media-player

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  run.sh
src/: PlayerGUI.cpp  PlayerGUI.hpp  main.cpp
